--- a/index.html
+++ b/index.html
@@ -239,6 +239,46 @@
         .inputform input {
           width: 100%;
         }
+        .secondsection {
+          font-size: 1.2rem;
+          margin: 20px;
+          margin-left: 20px;
+        }
+
+        .secondsection p {
+          font-size: 1.1rem;
+          line-height: 1.5;
+          margin-right: 0;
+        }
+
+        .skill h3,
+        .sociallinks h3,
+        .educationsection h3 {
+          margin-left: 20px;
+          font-size: 1.3rem;
+        }
+
+        .skill li,
+        .educationsection li {
+          margin-left: 30px;
+          font-size: 1.1rem;
+        }
+
+        .sociallinks {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+
+        .sociallinks a {
+          margin: 10px;
+          font-size: 1.1rem;
+        }
+
+        .educationsection {
+          margin-left: 20px;
+          margin-right: 20px;
+        }
       }
 
       .fourthsection form {
