--- a/index.html
+++ b/index.html
@@ -4,365 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aditi Krishna Portfolio</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-      body {
-        background-color: rgb(145, 144, 144);
-        color: rgb(3, 0, 0);
-      }
-      nav {
-        justify-content: space-around;
-        align-items: center;
-        display: flex;
-        height: 70px;
-        color: azure;
-        background-color: rgb(19, 0, 129);
-      }
-      nav ul {
-        display: flex;
-        list-style: none;
-        justify-content: center;
-      }
-      nav ul li {
-        margin: 0 30px;
-      }
-      nav ul a {
-        font-size: 1.3rem;
-        text-decoration: none;
-        color: azure;
-      }
-
-      nav ul a:hover {
-        color: rgb(101, 115, 9);
-      }
-      .left {
-        font-size: 2rem;
-      }
-      .firstsection {
-        display: flex;
-        justify-content: space-around;
-        margin: 24vh 0px;
-      }
-      .firstsection > div {
-        width: 40%;
-      }
-      .leftsection {
-        font-size: 3rem;
-        margin: 30px 0;
-        margin-left: 80px;
-      }
-      .rightsection img {
-        width: 300px;
-        height: auto;
-        margin-top: -60px;
-        border-radius: 10px;
-        margin-left: 40px; /* move right */
-        border-radius: 10px;
-      }
-
-      .name {
-        color: rgb(36, 1, 79);
-      }
-      .intro {
-        font-size: 2rem;
-        margin-top: 25px;
-        color: rgb(103, 6, 54);
-      }
-      #element {
-        font-size: 2rem;
-        margin-top: 25px;
-        color: rgb(14, 70, 1);
-      }
-      main hr {
-        border: 0;
-        background-color: blueviolet;
-        height: 1.2px;
-        margin: 40px 85px;
-      }
-      .secondsection {
-        font-size: 2rem;
-        margin: 40px 0;
-        margin-left: 80px;
-      }
-      .secondsection p {
-        padding: 5px;
-        margin-right: 15px;
-        gap: 10px;
-        color: rgb(87, 4, 63);
-        line-height: 1;
-        font-size: 1.7rem;
-      }
-      .secondsection h2 {
-        margin-bottom: 20px;
-      }
-      .thirdsection {
-        font-size: 2rem;
-        margin: 40px 0;
-        margin-left: 80px;
-        padding: 50px 20px;
-      }
-      .fourthsection {
-        font-size: 2rem;
-        margin: 40px 0;
-        margin-left: 80px;
-      }
-      footer {
-        background-color: rgb(19, 0, 129);
-        color: azure;
-        height: 220px;
-      }
-      .footer {
-        display: flex;
-        margin: 50px 90px;
-        justify-content: space-around;
-        align-items: center;
-        color: azure;
-      }
-      .first-footer {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        font-size: larger;
-        font-weight: bolder;
-        align-items: center;
-        text-align: center;
-      }
-      .second-footer ul {
-        list-style: none;
-        display: block;
-      }
-      .second-footer ul li {
-        text-decoration: none;
-        margin: 20px;
-      }
-      .second-footer a {
-        text-decoration: none;
-        color: black;
-        margin: 10px;
-        font-weight: bold;
-      }
-      .projectcontainer {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 30px;
-      }
-      .project1 {
-        background-color: rgb(215, 215, 215);
-        border-radius: 12px;
-        width: 300px;
-        padding: 20px;
-      }
-      .portfolioimg {
-        width: 100%;
-        height: 180px;
-        object-fit: cover;
-        border-radius: 8px;
-        margin-bottom: 15px;
-      }
-      .project1 h3 {
-        font-size: 28px;
-        color: #1e3a8a;
-        margin-bottom: 12px;
-        text-align: center;
-      }
-      .project1 p {
-        font-size: 18px;
-        color: #333;
-        margin-bottom: 12px;
-      }
-
-      .view-button {
-        display: inline-block;
-        background-color: transparent;
-        color: rgb(35, 23, 0);
-        font-weight: bold;
-        text-decoration: none;
-        border: none;
-        cursor: pointer;
-        font-size: 20px;
-        transition: color 0.3s;
-      }
-
-      .view-button:hover {
-        text-decoration: underline;
-        color: darkorange;
-      }
-
-      @media (max-width: 780px) {
-        .firstsection {
-          flex-direction: column;
-          align-items: center;
-          margin: 60px 70px;
-        }
-        .firstsection > div {
-          width: 90%;
-        }
-        .leftsection {
-          font-size: 3rem;
-          margin: 20px 0;
-        }
-        .rightsection img {
-          max-width: 250px;
-          height: auto;
-        }
-        .thirdsection {
-          font-size: 1.5rem;
-          margin-left: 20px;
-          margin-right: 20px;
-          padding: 20px;
-        }
-        .project1 {
-          width: 90%;
-        }
-
-        nav {
-          flex-direction: column;
-          height: auto;
-          padding: 10px 0;
-        }
-
-        nav ul {
-          flex-direction: column;
-          gap: 10px;
-        }
-
-        nav ul li {
-          margin: 10px 0;
-        }
-        .footer {
-          flex-direction: column;
-          text-align: center;
-          gap: 20px;
-        }
-        .inputform input {
-          width: 100%;
-        }
-        .secondsection {
-          font-size: 1.2rem;
-          margin: 20px;
-          margin-left: 20px;
-        }
-
-        .secondsection p {
-          font-size: 1.1rem;
-          line-height: 1.5;
-          margin-right: 0;
-        }
-
-        .skill h3,
-        .sociallinks h3,
-        .educationsection h3 {
-          margin-left: 20px;
-          font-size: 1.3rem;
-        }
-
-        .skill li,
-        .educationsection li {
-          margin-left: 30px;
-          font-size: 1.1rem;
-        }
-
-        .sociallinks {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-        }
-
-        .sociallinks a {
-          margin: 10px;
-          font-size: 1.1rem;
-        }
-
-        .educationsection {
-          margin-left: 20px;
-          margin-right: 20px;
-        }
-      }
-
-      .fourthsection form {
-        max-width: 590px;
-        text-align: center;
-        margin-bottom: 20px;
-        margin: auto;
-      }
-      .inputform {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        margin-bottom: 12px;
-        gap: 10px;
-      }
-      .fourthsection input,
-      .fourthsection textarea {
-        width: 100%;
-        padding: 15px;
-        border: #333 solid;
-        border-radius: 8px;
-      }
-      .fourthsection input[type="submit"] {
-        background-color: rgb(19, 0, 129);
-        color: white;
-        font-weight: bold;
-        border: none;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
-
-      .fourthsection input[type="submit"]:hover {
-        background-color: rgb(210, 95, 120);
-      }
-      .skill h3 {
-        margin: 15px;
-        margin-left: 60px;
-      }
-      .skill ul {
-        list-style: none;
-      }
-      .skill li {
-        margin: 7px;
-        margin-left: 80px;
-        font-size: 1.7rem;
-      }
-      .skill strong {
-        color: rgb(16, 2, 64);
-      }
-      .sociallinks {
-        margin: 0px;
-        padding: 10px;
-      }
-      .sociallinks h3 {
-        margin: 15px;
-        margin-left: 60px;
-      }
-      .sociallinks a {
-        margin: 120px;
-        text-decoration: none;
-        font-weight: bold;
-        color: rgb(93, 0, 31);
-      }
-      .sociallinks a:hover {
-        color: #1e3a8a;
-      }
-      .educationsection {
-        font-size: 2rem;
-        margin: 40px 0;
-        margin-left: 80px;
-      }
-
-      .educationsection ul {
-        list-style-type: none;
-        padding-left: 20px;
-        margin-top: 10px;
-      }
-
-      .educationsection li {
-        font-size: 1.7rem;
-        color: rgb(24, 0, 75);
-        margin: 15px 0;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -370,16 +12,16 @@
         <div class="left">Aditi Krishna Portfolio</div>
         <div class="right">
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/">About</a></li>
-            <li><a href="/">Projects</a></li>
-            <li><a href="/">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
     </header>
     <main>
-      <section class="firstsection">
+      <section id="home" class="firstsection">
         <div class="leftsection">
           <p>Hi, I am <span class="name">Aditi Krishna</span></p>
 
@@ -393,7 +35,7 @@
         </div>
       </section>
       <hr />
-      <section class="secondsection">
+      <section id="about" class="secondsection">
         <h2>About Me</h2>
         <p>
           I am a passionate and dedicated web developer with a strong interest
@@ -424,7 +66,10 @@
         </div>
         <div class="sociallinks">
           <h3>Connect With Me</h3>
-          <a href="www.linkedin.com/in/akkrishna"><i>Linkedin</i></a>
+          <a href="https://www.linkedin.com/in/akkrishna" target="_blank"
+            ><i>LinkedIn</i></a
+          >
+
           <a href="https://github.com/aditikrishsharma"><i>Github</i></a>
         </div>
         <div class="educationsection">
@@ -440,7 +85,7 @@
         </div>
       </section>
       <hr />
-      <section class="thirdsection">
+      <section id="projects" class="thirdsection">
         <h2>Projects</h2>
         <div class="projectcontainer">
           <div class="project1">
@@ -456,7 +101,7 @@
         </div>
       </section>
       <hr />
-      <section class="fourthsection">
+      <section id="contact" class="fourthsection">
         <h2>Contact Me</h2>
         <form action="#">
           <div class="inputform">
