--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
         <div class="first-footer">Aditi Developer Portfolio</div>
         <div class="second-footer">
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/">About</a></li>
-            <li><a href="/">Projects</a></li>
-            <li><a href="/">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -140,7 +140,7 @@
 
     <script>
       var typed = new Typed("#element", {
-        strings: ["Web Developer , Problem Solver"],
+        strings: ["Problem Solver"],
         typeSpeed: 50,
       });
     </script>
