--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="./Resume Aditi Krishna.pdf" download class="text-blue-600 font-semibold">Resume</a></li>
+            <li><a href="./Aditi_Krishna.pdf" download class="text-blue-600 font-semibold">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
+            
 
           </ul>
         </div>
       </nav>
     </header>
     <main>
+      
       <section id="home" class="firstsection">
         <div class="leftsection">
           <p>Hi, I am <span class="name">Aditi Krishna</span></p>
@@ -105,9 +107,8 @@
       <hr />
       <section id="contact" class="fourthsection">
         <h2>Contact Me</h2>
-        <form action="https://formsubmit.co/ak.krishnaaditi@gmail.com" method="POST">
-          <input type="hidden" name="_captcha" value="false">
-          <div class="inputform">
+        <form >
+            <div class="inputform">
             <input type="text" name="name" placeholder="Full Name" required />
             <input type="email" name="email" placeholder="Email Id" required />
           </div>
@@ -124,9 +125,10 @@
 
     <script>
       var typed = new Typed("#element", {
-        strings: ["Problem Solver"],
+        strings: ["Problem Solver", "Web Developer", "Tech Enthusiast"],
         typeSpeed: 50,
       });
     </script>
+    <script src="script.js"></script>
   </body>
 </html>
