--- a/index.html
+++ b/index.html
@@ -100,8 +100,28 @@
               projects, built with HTML, CSS, and JavaScript for a clean and
               responsive UI.
             </p>
-            <a href="/" class="view-button"> 🪟View</a>
+            <a href="https://akrishna.vercel.app/" class="view-button"> 🪟View</a>
           </div>
+           <div class="project1">
+            <img src="./portfolioimg.png" alt="" class="portfolioimg" />
+            <h3>Weather Site</h3>
+            <p>A clean, modern weather site built with HTML5, CSS3 ,JavaScript that shows real time weather data using the OpenWeatherMap API 
+            </p>
+            <a href="https://weatherapp-eight-indol.vercel.app/" class="view-button"> 🪟View</a>
+          </div>
+
+          <div class="project1">
+            <img src="./portfolioimg.png" alt="" class="portfolioimg" />
+            <h3>Student's Buddy</h3>
+            <p>A clean, modern weather site built with HTML5, CSS3 ,JavaScript that shows real time weather data using the OpenWeatherMap API 
+            </p>
+            <a href="https://weatherapp-eight-indol.vercel.app/" class="view-button"> 🪟View</a>
+          </div>
+          
+
+     
+
+
         </div>
       </section>
       <hr />
