--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <a href="https://akrishna.vercel.app/" class="view-button"> 🪟View</a>
           </div>
            <div class="project1">
-            <img src="./portfolioimg.png" alt="" class="portfolioimg" />
+            <img src="./weathericon.png" alt="" class="portfolioimg" />
             <h3>Weather Site</h3>
             <p>A clean, modern weather site built with HTML5, CSS3 ,JavaScript that shows real time weather data using the OpenWeatherMap API 
             </p>
