--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             ><i>LinkedIn</i></a
           >
 
-          <a href="https://github.com/aditikrishsharma"><i>Github</i></a>
+          <a href="https://github.com/aditik-20"><i>Github</i></a>
         </div>
         <div class="educationsection">
           <h3>Education</h3>
