--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aditi Krishna Portfolio</title>
+    <title>Aditi Krishna</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <div class="left">Aditi Krishna Portfolio</div>
+        <div class="left">Aditi Krishna</div>
         <div class="right">
           <ul>
             <li><a href="#home">Home</a></li>
@@ -27,45 +27,38 @@
       
       <section id="home" class="firstsection">
         <div class="leftsection">
-          <p>Hi, I am <span class="name">Aditi Krishna</span></p>
+          <p>Hello, I’m <span class="name">Aditi Krishna</span></p>
 
           <div class="intro">
-            A passionate learner stepping into the world of Web Development.
+            “Computer Science student and aspiring Full-Stack Java Developer with strong DSA fundamentals.”
           </div>
           <span id="element"></span>
         </div>
         <div class="rightsection">
-          <img src="./profile_photo.png" alt="profile" />
+          <img src="./profile_photo.jpeg" alt="profile" />
         </div>
       </section>
       <hr />
       <section id="about" class="secondsection">
         <h2>About Me</h2>
         <p>
-          I am a passionate and dedicated web developer with a strong interest
-          in creating responsive and user-friendly websites. My journey in
-          development began with learning HTML and CSS, and I have since
-          expanded into JavaScript, UI/UX design, and portfolio building.
+          I’m Aditi Krishna, an aspiring Full-Stack Java Developer with a strong foundation in Data Structures and Algorithms. I enjoy solving problems and building clean, scalable applications using Java and modern web technologies. I’m continuously improving my backend development skills and focusing on writing efficient, maintainable code.
         </p>
         <p>
-          I enjoy solving problems, learning new technologies, and building
-          projects that showcase my skills and creativity. Currently, I am
-          working on personal projects to further improve my coding and design
-          abilities.
+         Alongside development, I have a keen interest in Data Analysis and hands-on experience with SQL, Excel, and Power BI for data cleaning, analysis, and visualization. I enjoy working with data to extract meaningful insights and create clear, impactful dashboards that support data-driven decisions.
         </p>
         <div class="skill">
           <h3>Skills:</h3>
           <ul>
-            <li><strong>Programming Languages :</strong> C , Java</li>
+            <li><strong>Programming Languages :</strong> C , Java , Python</li>
             <li>
               <strong>Web Technologies : </strong>HTML5 , CSS , JavaScript
             </li>
-            <li><strong>Tools :</strong> Git , GitHub , VS Code</li>
-            <li><strong>Core Concept :</strong> Object-Oriented-Programming</li>
             <li>
-              <strong>Soft Skills :</strong> Problem Solving, Self-Motivated,
-              Quick Learner, Team Collaboration
+              <strong>Database : </strong>MYSQL.
             </li>
+            <li><strong>Tools :</strong> Git , GitHub , VS Code , MS Excel , Power BI</li>
+            <li><strong>Core Concept :</strong> Object-Oriented-Programming , Data Structue Algorithm , Operating System</li>
           </ul>
         </div>
         <div class="sociallinks">
@@ -92,6 +85,14 @@
       <section id="projects" class="thirdsection">
         <h2>Projects</h2>
         <div class="projectcontainer">
+           <div class="project1">
+            <img src="./bank.avif" alt="" class="portfolioimg" />
+            <h3>ATM Stimulation Bank Management System</h3>
+            <p> Developed a Java-based ATM Simulation project using Swing GUI, implementing core banking operations like
+withdrawal, deposit, balance inquiry, and transaction history.
+            </p>
+            <a href="https://github.com/aditik-20/ATMAPP" class="view-button"> 🪟GitHub</a>
+          </div>
           <div class="project1">
             <img src="./portfolioimg.png" alt="" class="portfolioimg" />
             <h3>Personal Portfolio</h3>
@@ -101,6 +102,8 @@
               responsive UI.
             </p>
             <a href="https://akrishna.vercel.app/" class="view-button"> 🪟View</a>
+            <p></p>
+            <a href="https://github.com/aditik-20/my_portfolio" class="view-button"> 🪟GitHub</a>
           </div>
            <div class="project1">
             <img src="./weathericon.png" alt="" class="portfolioimg" />
@@ -108,7 +111,12 @@
             <p>A clean, modern weather site built with HTML5, CSS3 ,JavaScript that shows real time weather data using the OpenWeatherMap API 
             </p>
             <a href="https://weatherapp-eight-indol.vercel.app/" class="view-button"> 🪟View</a>
+            <p></p>
+            <a href="https://github.com/aditik-20/WeatherSite" class="view-button"> 🪟GitHub</a>
           </div>
+
+         
+
          </section>
       <hr />
       <section id="contact" class="fourthsection">
