--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="hero-center">
-        <img src="./profile_photo.jpeg" alt="Aditi Krishna" />
+        <img src="./profile_photo.png" alt="Aditi Krishna" />
       </div>
 
       <div class="hero-right">
