--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       href="https://fonts.googleapis.com/css2?family=Allura&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -42,9 +48,8 @@
 
       <div class="hero-right">
         <p>
-          Computer Science student and aspiring Full-Stack Java Developer with
-          strong DSA fundamentals and interest in building clean, scalable
-          applications.
+          Turning ideas into scalable applications with Java and solid DSA
+          fundamentals.
         </p>
         <a href="#projects" class="view-project-btn">View Projects →</a>
       </div>
@@ -63,7 +68,7 @@
         Power BI to create meaningful dashboards and insights.
       </p>
 
-      <div class="skills">
+      <div id="skills" class="skills">
         <div>
           <h3>Technical Skills</h3>
           <ul>
