Social Link added

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
       <h1 class="logo">Aditi Krishna</h1>
       <nav>
         <nav>
-          <a href="#about">About</a>
-          <a href="#skills">Skills</a>
-          <a href="mailto:ak.krishnaaditi@gmail.com" class="email-link"
+          <a class="link" href="#about">About</a>
+          <a class="link" href="#skills">Skills</a>
+          <a class="link" href="mailto:ak.krishnaaditi@gmail.com" class="link"
             >ak.krishnaaditi@gmail.com</a
           >
+          <a href="https://www.linkedin.com/in/akkrishna/" class="link"
+            >Linkedin</a
+          >
+          <a href="https://github.com/aditik-20" class="link">aditik-20</a>
         </nav>
       </nav>
     </header>
@@ -89,6 +93,14 @@
           </ul>
         </div>
       </div>
+    </section>
+
+    <!--Featured Project-->
+    <section id="projects" class="section gray">
+      <h2>Featured Projects</h2>
+      <p style="font-family: Great Vibes">
+        Projects are currently in progress.
+      </p>
     </section>
 
     <!-- PROJECTS -->
